--- a/pages/savedata.html
+++ b/pages/savedata.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Psych Engine - Save Data Functions</title>
+		<title>Shadow Engine - Save Data Functions</title>
 		<link rel="stylesheet" href="../css/main.css">
 		<link rel="stylesheet" href="../css/header.css">
 		<link rel="stylesheet" href="../css/search.css">
@@ -29,8 +29,8 @@
 		<div class="headerbox">
 			<div class="header">
 				<a href="../index.html">
-					<img width="64" src="../assets/icon.ico" alt="Psych Engine Logo" draggable="false">
-					<div class="headertext">Psych Engine - Lua Script API</div>
+					<img width="64" src="../assets/icon.ico" alt="Shadow Engine Logo" draggable="false">
+					<div class="headertext">Shadow Engine - Lua Script API</div>
 				</a>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 			<p>Initializes a Save Data.</p>
 			<ul>
 				<li><b><span class="variablemarkup">save</span></b> - Save Data Name, make it unique to avoid overwriting!</li>
-				<li><b><span class="variablemarkup">folder</span> (Optional)</b> - Folder in "%appdata%/ShadowMario/PsychEngine/".</li>
+				<li><b><span class="variablemarkup">folder</span> (Optional)</b> - Folder in "%appdata%/FNF-SE/ShadowEngine/".</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
