--- a/pages/variables.html
+++ b/pages/variables.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Psych Engine - Lua Variables</title>
+		<title>Shadow Engine - Lua Variables</title>
 		<link rel="stylesheet" href="../css/main.css">
 		<link rel="stylesheet" href="../css/header.css">
 		<link rel="stylesheet" href="../css/search.css">
@@ -29,8 +29,8 @@
 		<div class="headerbox">
 			<div class="header">
 				<a href="../index.html">
-					<img width="64" src="../assets/icon.ico" alt="Psych Engine Logo" draggable="false">
-					<div class="headertext">Psych Engine - Lua Script API</div>
+					<img width="64" src="../assets/icon.ico" alt="Shadow Engine Logo" draggable="false">
+					<div class="headertext">Shadow Engine - Lua Script API</div>
 				</a>
 			</div>
 		</div>
@@ -49,9 +49,10 @@
 			<li class="variableitem"><span class="methodexample">modFolder</span> - Mod Folder the Lua Script is running in.</li>
 			<li class="variableitem"><span class="methodexample">currentModDirectory</span> - Mod Folder of the Custom Week being played, empty on Base Game Weeks.</li>
 			<hr>
-			<h3>Psych Engine Information Variables</h3>
+			<h3>Shadow Engine Information Variables</h3>
 			<li class="variableitem"><span class="methodexample">version</span> - Psych Engine's Version String.</li>
-			<li class="variableitem"><span class="methodexample">buildTarget</span> - What kind of build of Psych you're running, can be: "windows", "windows_x86" or "linux".</li>
+			<li class="variableitem"><span class="methodexample">shadowVersion</span> - Shadow Engine's Version String.</li>
+			<li class="variableitem"><span class="methodexample">buildTarget</span> - What kind of build of SE you're running, can be: "windows", "windows_x86" or "linux".</li>
 			<hr>
 			<h3>Function Return Variables</h3>
 			<li class="variableitem"><span class="methodexample">Function_StopLua</span> - Stops the function from being called only in the next Lua Scripts.</li>
@@ -180,6 +181,6 @@
 			<li class="variableitem"><span class="methodexample">splashAlpha</span> - Default value: 0.6</li>
 			<br>
 			<li class="variableitem"><span class="methodexample">noteSkinPostfix</span> - Noteskin File Path postfix (Examples: "-future", "-chip", empty for Default).</li>
-			<li class="variableitem"><span class="methodexample">splashSkinPostfix</span> - Note Splashes File Path postfix (Examples: "-diamond", "-vanilla", empty for Psych).</li>
+			<li class="variableitem"><span class="methodexample">splashSkinPostfix</span> - Note Splashes File Path postfix (Examples: "-diamond", "-vanilla", empty for SE).</li>
 	</body>
 </html>
