--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -297,7 +297,7 @@
 			<br>Returns whether the operation was successful.<p>
 			<ul>
 				<li><b><span class="variablemarkup">tag</span></b> - Variable name of the instance or Lua Object nametag.</li>
-				<li><b><span class="variablemarkup">camera</span> (Optional)</b> - Can be "game", "hud" or "other", defaults to "game".</li>
+				<li><b><span class="variablemarkup">camera</span> (Optional)</b> - Can be "game", "hud", "other" or your created camera, defaults to "game".</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
@@ -435,7 +435,7 @@
 			<p>Returns the Object's On-Camera X Position.<p>
 			<ul>
 				<li><b><span class="variablemarkup">tag</span></b> - Variable name of the instance or Lua Object nametag.</li>
-				<li><b><span class="variablemarkup">camera</span> (Optional)</b> - Can be "game", "hud" or "other", defaults to "game".</li>
+				<li><b><span class="variablemarkup">camera</span> (Optional)</b> - Can be "game", "hud", "other" or your created camera, defaults to "game".</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
@@ -449,7 +449,7 @@
 			<p>Returns the Object's On-Camera Y Position.<p>
 			<ul>
 				<li><b><span class="variablemarkup">tag</span></b> - Variable name of the instance or Lua Object nametag.</li>
-				<li><b><span class="variablemarkup">camera</span> (Optional)</b> - Can be "game", "hud" or "other", defaults to "game".</li>
+				<li><b><span class="variablemarkup">camera</span> (Optional)</b> - Can be "game", "hud", "other" or your created camera, defaults to "game".</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
