--- a/pages/tween.html
+++ b/pages/tween.html
@@ -151,7 +151,7 @@
 			<br>Returns the formatted Tween tag.</p>
 			<ul>
 				<li><b><span class="variablemarkup">twnTag</span></b> - Tween tag for the "onTweenCompleted" function, it should be unique or it will overwrite the previous one with the same name.</li>
-				<li><b><span class="variablemarkup">camera</span></b> - Can be "game", "hud" or "other".</li>
+				<li><b><span class="variablemarkup">camera</span></b> - Can be "game", "hud", "other" or your created camera.</li>
 				<li><b><span class="variablemarkup">value</span></b> - Target value at the end of the tween.</li>
 				<li><b><span class="variablemarkup">duration</span></b> - Tween duration.</li>
 				<li><b><span class="variablemarkup">ease</span> (Optional)</b> - <a href="https://api.haxeflixel.com/flixel/tweens/FlxEase.html">Tween ease</a>, defaults to "linear".</li>
