--- a/pages/input.html
+++ b/pages/input.html
@@ -73,7 +73,7 @@
 			<p class="methodbox">getMouseX(<span class="isoptional"?></span><span class="variablemarkup">camera</span>:String = 'game'):Float</p>
 			<p>Returns Mouse's Screen X from a Camera.</p>
 			<ul>
-				<li><b><span class="variablemarkup">camera</span></b> - Can be "game", "hud" or "other".</li>
+				<li><b><span class="variablemarkup">camera</span></b> - Can be "game", "hud", "other" or your created camera.</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
@@ -86,7 +86,7 @@
 			<p class="methodbox">getMouseY(<span class="isoptional"?></span><span class="variablemarkup">camera</span>:String = 'game'):Float</p>
 			<p>Returns Mouse's Screen Y from a Camera.</p>
 			<ul>
-				<li><b><span class="variablemarkup">camera</span></b> - Can be "game", "hud" or "other".</li>
+				<li><b><span class="variablemarkup">camera</span></b> - Can be "game", "hud", "other" or your created camera.</li>
 			</ul>
 			<hr>
 			
