Revert "pastebin -> gist"
This reverts commit feac0a91816e2a8dab3ba9005f00482d38123230.

--- a/pages/snippets.html
+++ b/pages/snippets.html
@@ -49,14 +49,14 @@
 			<hr>
 			<h2>Note Types and Events:</h2>
 			<li class="exampleitem"><a href="https://drive.google.com/file/d/1ysrKh-C7u9hb-uF2HUDs2fo8ch1QszPe">Example of a Custom Event - "Opponent Fade".</a></li>
-			<li class="exampleitem"><a href="https://gist.githubusercontent.com/HomuHomu833/b0890d1c023a3b3d1b108d64cbde9f61/raw/1917373974399a0446212c5303e8f8b5e8d143cd/customNoteType.txt">Example of a Custom Note Type TXT - Put it in "custom_notetypes/Orange Note.txt".</a></li>
+			<li class="exampleitem"><a href="https://pastebin.com/raw/Uh3gs2db">Example of a Custom Note Type TXT - Put it in "custom_notetypes/Orange Note.txt".</a></li>
 			<hr>
 			<h2>Stages:</h2>
 			<li class="exampleitem"><a href="https://drive.google.com/file/d/1BRfDxMsImUYedF4wTRn0Y3HYU_hv7zrF"> Week 1-6 stages recreated in Lua Stage Scripts.</a></li>
 			<hr>
 			<h2>Others:</h2>
-			<li class="exampleitem"><a href="https://gist.githubusercontent.com/HomuHomu833/b0890d1c023a3b3d1b108d64cbde9f61/raw/1917373974399a0446212c5303e8f8b5e8d143cd/tween.lua">Tween Example - Boyfriend gets bigger on his turn.</a></li>
-			<li class="exampleitem"><a href="https://gist.githubusercontent.com/HomuHomu833/b0890d1c023a3b3d1b108d64cbde9f61/raw/1917373974399a0446212c5303e8f8b5e8d143cd/animatedSprite.lua">Animated Sprite Example - Dad clone behind Dad that only bops his head.</a></li>
-			<li class="exampleitem"><a href="https://gist.githubusercontent.com/HomuHomu833/b0890d1c023a3b3d1b108d64cbde9f61/raw/1917373974399a0446212c5303e8f8b5e8d143cd/setPropertyFromClass.lua">Usage of setPropertyFromClass - Game Over Modifications.</a></li>
+			<li class="exampleitem"><a href="https://pastebin.com/raw/qtNwJ3vu">Tween Example - Boyfriend gets bigger on his turn.</a></li>
+			<li class="exampleitem"><a href="https://pastebin.com/raw/QcB5zXYx">Animated Sprite Example - Dad clone behind Dad that only bops his head.</a></li>
+			<li class="exampleitem"><a href="https://pastebin.com/raw/0bGRzRzA">Usage of setPropertyFromClass - Game Over Modifications.</a></li>
 	</body>
 </html>
