--- a/pages/spritesheet.html
+++ b/pages/spritesheet.html
@@ -231,7 +231,7 @@
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
 				<li class="exampleitem"><span class="methodexample">loadMultipleFrames('mySprite', {'spritesheet1', 'spritesheet2', 'spritesheet3'})</span> - Loads 3 spritesheets in a single Lua Sprite named "mySprite".</li>
-				<li class="exampleitem"><a href="https://gist.githubusercontent.com/HomuHomu833/b0890d1c023a3b3d1b108d64cbde9f61/raw/c722eeccdbc6f4837b3400692385d436dd34ccbe/loadMultipleFrames.lua">Click here for a detailed use explanation.</a></li>
+				<li class="exampleitem"><a href="https://pastebin.com/raw/GTTkxV2R">Click here for a detailed use explanation.</a></li>
 			</ul>
 			<hr>
 
