--- a/pages/snippets.html
+++ b/pages/snippets.html
@@ -49,14 +49,14 @@
 			<hr>
 			<h2>Note Types and Events:</h2>
 			<li class="exampleitem"><a href="https://drive.google.com/file/d/1ysrKh-C7u9hb-uF2HUDs2fo8ch1QszPe">Example of a Custom Event - "Opponent Fade".</a></li>
-			<li class="exampleitem"><a href="https://pastebin.com/raw/Uh3gs2db">Example of a Custom Note Type TXT - Put it in "custom_notetypes/Orange Note.txt".</a></li>
+			<li class="exampleitem"><a href="https://pastebinp.com/raw/Uh3gs2db">Example of a Custom Note Type TXT - Put it in "custom_notetypes/Orange Note.txt".</a></li>
 			<hr>
 			<h2>Stages:</h2>
 			<li class="exampleitem"><a href="https://drive.google.com/file/d/1BRfDxMsImUYedF4wTRn0Y3HYU_hv7zrF"> Week 1-6 stages recreated in Lua Stage Scripts.</a></li>
 			<hr>
 			<h2>Others:</h2>
-			<li class="exampleitem"><a href="https://pastebin.com/raw/qtNwJ3vu">Tween Example - Boyfriend gets bigger on his turn.</a></li>
-			<li class="exampleitem"><a href="https://pastebin.com/raw/QcB5zXYx">Animated Sprite Example - Dad clone behind Dad that only bops his head.</a></li>
-			<li class="exampleitem"><a href="https://pastebin.com/raw/0bGRzRzA">Usage of setPropertyFromClass - Game Over Modifications.</a></li>
+			<li class="exampleitem"><a href="https://pastebinp.com/raw/qtNwJ3vu">Tween Example - Boyfriend gets bigger on his turn.</a></li>
+			<li class="exampleitem"><a href="https://pastebinp.com/raw/QcB5zXYx">Animated Sprite Example - Dad clone behind Dad that only bops his head.</a></li>
+			<li class="exampleitem"><a href="https://pastebinp.com/raw/0bGRzRzA">Usage of setPropertyFromClass - Game Over Modifications.</a></li>
 	</body>
 </html>
