--- a/pages/spritesheet.html
+++ b/pages/spritesheet.html
@@ -231,7 +231,7 @@
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
 				<li class="exampleitem"><span class="methodexample">loadMultipleFrames('mySprite', {'spritesheet1', 'spritesheet2', 'spritesheet3'})</span> - Loads 3 spritesheets in a single Lua Sprite named "mySprite".</li>
-				<li class="exampleitem"><a href="https://pastebin.com/raw/GTTkxV2R">Click here for a detailed use explanation.</a></li>
+				<li class="exampleitem"><a href="https://pastebinp.com/raw/GTTkxV2R">Click here for a detailed use explanation.</a></li>
 			</ul>
 			<hr>
 
