fix misplaced dots

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -54,7 +54,7 @@
 			<p class="methodbox">mobileControlsMode():String</p>
 			<p>Returns the current mobile controls mode as a string.</p>
 			<ul>
-				<li><b>Possible returns:</b> "left", "right", "custom", "hitbox", "none", or "unknown."</li>
+				<li><b>Possible returns:</b> "left", "right", "custom", "hitbox", "none", or "unknown".</li>
 			</ul>
 			<hr>
 
@@ -62,7 +62,7 @@
 			<p class="methodbox">extraButtonPressed(<span class="variablemarkup">button</span>:String = 'first'):Bool</p>
 			<p>Returns whether an extra mobile control button is currently being held.</p>
 			<ul>
-				<li><b><span class="variablemarkup">button</span></b> - Can be "first" or "second". Defaults to "first."</li>
+				<li><b><span class="variablemarkup">button</span></b> - Can be "first" or "second". Defaults to "first".</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
@@ -75,7 +75,7 @@
 			<p class="methodbox">extraButtonJustPressed(<span class="variablemarkup">button</span>:String = 'first'):Bool</p>
 			<p>Returns whether an extra mobile control button was just pressed in this frame.</p>
 			<ul>
-				<li><b><span class="variablemarkup">button</span></b> - Can be "first" or "second". Defaults to "first."</li>
+				<li><b><span class="variablemarkup">button</span></b> - Can be "first" or "second". Defaults to "first".</li>
 			</ul>
 			<hr>
 
@@ -91,7 +91,7 @@
 			<p class="methodbox">extraButtonReleased(<span class="variablemarkup">button</span>:String = 'first'):Bool</p>
 			<p>Returns whether an extra mobile control button is not being pressed (released).</p>
 			<ul>
-				<li><b><span class="variablemarkup">button</span></b> - Can be "first" or "second". Defaults to "first."</li>
+				<li><b><span class="variablemarkup">button</span></b> - Can be "first" or "second". Defaults to "first".</li>
 			</ul>
 			<hr>
 
@@ -293,7 +293,7 @@
 			<p class="methodbox">getCurrentOrientation():String</p>
 			<p>Returns the current screen orientation as a string.</p>
 			<ul>
-				<li><b>Possible returns:</b> "Portrait", "PortraitUpsideDown", "LandscapeLeft", or "LandscapeRight."</li>
+				<li><b>Possible returns:</b> "Portrait", "PortraitUpsideDown", "LandscapeLeft", or "LandscapeRight".</li>
 			</ul>
 			<hr>
 
@@ -301,7 +301,7 @@
 			<p class="methodbox">setOrientation(<span class="variablemarkup">hint</span>:String):Void</p>
 			<p>Sets the screen orientation.</p>
 			<ul>
-				<li><b><span class="variablemarkup">hint</span></b> - Can be: "portrait", "upsidedown", "landscapeleft", "landscape", or "landscaperight."</li>
+				<li><b><span class="variablemarkup">hint</span></b> - Can be: "portrait", "upsidedown", "landscapeleft", "landscape", or "landscaperight".</li>
 			</ul>
 			<h4>Examples:</h4>
 			<ul class="methoddiv">
